<?xml version="1.0"?>
<package>
  <name>scitos_teleop</name>
  <version>0.1.0</version>
  <description>The scitos teleoperation package designed to control a Scitos A5 robot with a Logitec F710 wirless gamepad.</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/scitos_apps</url>

  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>
  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>scitos_msgs</build_depend>
  <build_depend>scitos_apps_msgs</build_depend>
  <run_depend>scitos_apps_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>scitos_msgs</run_depend>
  <run_depend>joy</run_depend>

  <export/>
</package>
