<?xml version="1.0"?>
<package>
  <name>scitos_virtual_bumper</name>
  <version>0.2.0</version>
  <description>Puts robot on free run whenever pushed</description>

  <maintainer email="tkrajnik@lincoln.ac.uk">gestom</maintainer>

  <license>WTFPL</license>

  <url type="website">https://github.com/strands-project/scitos_apps</url>

  <author email="tkrajnik@lincoln.ac.uk">gestom</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>scitos_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>scitos_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend> 

  <export/>
</package>
